Added seeds and CRUD fixes

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -11,4 +11,5 @@
   </div>
 
   <%= f.submit 'Submit', class: 'mt-2 btn btn-primary' %>
+  <%= link_to 'Back', games_path, class: 'mt-2 btn btn-secondary' %>
 <% end %>
