--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,9 +1,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
   <h1 class="h2">Players</h1>
   <div class="btn-toolbar mb-2 mb-md-0">
-    <button type="button" class="btn btn-sm btn-outline-secondary">
-      New
-    </button>
+    <%= link_to 'New', new_player_path, class: 'btn btn-sm btn-outline-secondary' %>
   </div>
 </div>
 <div class="table-responsive">
@@ -29,8 +27,10 @@
           <td><%= player.email %></td>
           <td><%= player.phone %></td>
           <td>
-            <%= link_to 'Edit', game_path(game), class: 'btn btn-sm btn-outline-primary' %><br>
-            <%= link_to 'Destroy', game_path(game), method: :destroy, class: 'btn btn-sm btn-outline-danger' %>
+            <div class="actions d-flex justify-content-around">
+              <%= link_to 'Edit', edit_player_path(player), class: 'btn btn-sm btn-primary' %><br>
+              <%= link_to 'Destroy', player_path(player), method: :destroy, class: 'btn btn-sm btn-danger' %>
+            </div>
           </td>
         </tr>
       <% end %>
