--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       <div class="row">
         <%= render 'shared/sidebar' %>
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+          <%= render 'shared/flash_messages' %>
           <%= yield %>
         </main>
       </div>
