--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -9,8 +9,8 @@
       <%= f.text_field :last_name, class: 'form-control', placeholder: 'Last name' %>
     </div>
     <div class="col-12">
-      <%= f.label :nickname, class: 'form-label' %>
-      <%= f.text_field :nickname, class: 'form-control', placeholder: 'Nickname' %>
+      <%= f.label :nick_name, class: 'form-label' %>
+      <%= f.text_field :nick_name, class: 'form-control', placeholder: 'Nickname' %>
     </div>
     <div class="col-12">
       <%= f.label :email, class: 'form-label' %>
