--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -30,6 +30,7 @@
             <div class="actions d-flex justify-content-around">
               <%= link_to 'Edit', edit_player_path(player), class: 'btn btn-sm btn-primary' %><br>
               <%= link_to 'Destroy', player_path(player), method: :destroy, class: 'btn btn-sm btn-danger' %>
+              <%= link_to 'Show', player_path(player), class: 'btn btn-sm btn-secondary' %>
             </div>
           </td>
         </tr>
